# SubVid

./: README.md  pyproject.toml
src/subvid/: main.py  segment.py  smart_cut.py
tests/: test_main.py
